--- a/frontend-marlbruh/package.json
+++ b/frontend-marlbruh/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mantine/core": "^6.0.19",
+    "@mantine/form": "^6.0.19",
     "@mantine/hooks": "^6.0.19",
     "@tabler/icons-react": "^2.30.0",
     "react": "^18.2.0",
