--- a/frontend-marlbruh/package.json
+++ b/frontend-marlbruh/package.json
@@ -14,6 +14,7 @@
     "@mantine/form": "^6.0.19",
     "@mantine/hooks": "^6.0.19",
     "@tabler/icons-react": "^2.30.0",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
