--- a/frontend-marlbruh/package.json
+++ b/frontend-marlbruh/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@mantine/core": "^6.0.19",
+    "@mantine/dropzone": "^6.0.19",
     "@mantine/form": "^6.0.19",
     "@mantine/hooks": "^6.0.19",
+    "@mantine/notifications": "^6.0.19",
     "@tabler/icons-react": "^2.30.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
