--- a/frontend-marlbruh/package.json
+++ b/frontend-marlbruh/package.json
@@ -18,6 +18,7 @@
     "@tabler/icons-react": "^2.30.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-router-dom": "^6.15.0"
