Create "data" folder to store database and media

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 frontend-marlbruh/node_modules
 .vscode
 .DS_Store
-backend-marlbruh/media
+backend-marlbruh/data
 
 
 # Byte-compiled / optimized / DLL files
