added media file to gitifnore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ frontend-marlbruh/node_modules
 .vscode
 .DS_Store
 backend-marlbruh/data
+backend-marlbruh/media
 
 
 # Byte-compiled / optimized / DLL files
