--- a/frontend-marlbruh/package.json
+++ b/frontend-marlbruh/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview --host 0.0.0.0"
   },
   "dependencies": {
+    "@mantine/carousel": "^6.0.20",
     "@mantine/core": "^6.0.19",
     "@mantine/dropzone": "^6.0.19",
     "@mantine/form": "^6.0.19",
@@ -17,6 +18,7 @@
     "@mantine/notifications": "^6.0.19",
     "@tabler/icons-react": "^2.30.0",
     "axios": "^1.4.0",
+    "embla-carousel-react": "^8.0.0-rc13",
     "react": "^18.2.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
