--- a/frontend-marlbruh/package.json
+++ b/frontend-marlbruh/package.json
@@ -22,6 +22,7 @@
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
+    "react-full-screen": "^1.1.1",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
