--- a/frontend-marlbruh/package.json
+++ b/frontend-marlbruh/package.json
@@ -20,6 +20,7 @@
     "embla-carousel-react": "^8.0.0-rc13",
     "react": "^18.2.0",
     "react-confetti-explosion": "^2.1.2",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-full-screen": "^1.1.1",
